# Mas-Seq-Magic-Pocket

./: README.md  mb_xx_isoform_clustering.ipynb  pyproject.toml  requirements.txt
Notebook/: mb_xx_isoform_clustering.ipynb
Notebook/resources/: README.md
src/mdl/masseqviz/: isoform_utils.py  vis_utils.py
